--- a/webclient/src/main/resources/templates/feature/administration/loginAttemptsGlobal.html
+++ b/webclient/src/main/resources/templates/feature/administration/loginAttemptsGlobal.html
@@ -19,66 +19,196 @@
 		<script th:src="@{/js/bootstrap-select.js}"></script>
 		<script th:src="@{/js/webclient.js}"></script>
 		<script th:src="@{/js/highcharts.js}"></script>
-
 		<script type="text/javascript" th:inline="text">
 			/*<![CDATA[*/
-	$(function () {
+		$(function() {
 
-    // Make monochrome colors and set them as default for all pies
-    Highcharts.getOptions().plotOptions.pie.colors = (function () {
-        var colors = [],
-            base = Highcharts.getOptions().colors[0],
-            i;
+	// Make monochrome colors and set them as default for all pies
+	Highcharts.getOptions().plotOptions.pie.colors = (function() {
+		var colors = [], base = Highcharts.getOptions().colors[0], i;
 
-        for (i = 0; i < 10; i += 1) {
-            // Start out with a darkened base color (negative brighten), and end
-            // up with a much brighter color
-            colors.push(Highcharts.Color(base).brighten((i - 3) / 7).get());
-        }
-        return colors;
-    }());
+		for (i = 0; i < 10; i += 1) {
+			// Start out with a darkened base color (negative brighten), and end
+			// up with a much brighter color
+			colors.push(Highcharts.Color(base).brighten((i - 3) / 7).get());
+		}
+		return colors;
+	}());
 
-    // Build the chart
-    $('#globalChart').highcharts({
-        chart: {
-            plotBackgroundColor: null,
-            plotBorderWidth: null,
-            plotShadow: false,
-            type: 'pie'
-        },
-        title: {
-            text: 'Browser market shares at a specific website, 2014'
-        },
-        tooltip: {
-            pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-        },
-        plotOptions: {
-            pie: {
-                allowPointSelect: true,
-                cursor: 'pointer',
-                dataLabels: {
-                    enabled: true,
-                    format: '<b>{point.name}</b>: {point.percentage:.1f} %',
-                    style: {
-                        color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
-                    }
-                }
-            }
-        },
-        series: [{
-            name: 'Brands',
-            data: [
-                { name: 'Microsoft Internet Explorer', y: 56.33 },
-                { name: 'Chrome', y: 24.03 },
-                { name: 'Firefox', y: 10.38 },
-                { name: 'Safari', y: 4.77 },
-                { name: 'Opera', y: 0.91 },
-                { name: 'Proprietary or Undetectable', y: 0.2 }
-            ]
-        }]
-    });
+	var categories_json = new Array();
+	var attempts_json = new Array();
+	$.getJSON('/admin/statistic/global/pieData', function(data) {
+		for (i = 0; i < data.length; i++) {
+			var attemptsSum = data[i].countOk + data[i].countFailed;
+
+			categories_json.push([ data[i].name, attemptsSum ]);
+			attempts_json.push({
+				drilldown : {
+					categories : [ '[[#{statisticGlobalChartAttemptsOk}]]', '[[#{statisticGlobalChartAttemptsFailed}]]' ],
+					data : [ data[i].countOk, data[i].countFailed ]
+				}
+			});
+		}
+
+		var userData = new Array();
+		var attemptsData = new Array();
+		var i;
+		var j;
+
+		for (i = 0; i < categories_json.length; i += 1) {
+			userData.push({
+				name : categories_json[i][0],
+				y : categories_json[i][1]
+			});
+
+			for (j = 0; j < 2; j += 1) {
+				attemptsData.push({
+					name : attempts_json[i].drilldown.categories[j],
+					y : attempts_json[i].drilldown.data[j]
+				});
+			}
+		}
+
+		$('#globalChartPie').highcharts(
+				{
+					chart : {
+						type : 'pie'
+					},
+					title : {
+						text : '[[#{statisticGlobalChartTitle}]]'
+					},
+					plotOptions : {
+						pie : {
+							shadow : false,
+							center : [ '50%', '50%' ]
+						}
+					},
+					series : [
+							{
+								name : '[[#{statisticGlobalChartAttemptsSum}]]',
+								data : userData,
+								size : '60%',
+								dataLabels : {
+									formatter : function() {
+										return this.y > 5 ? this.point.name
+												: null;
+									},
+									color : '#ffffff',
+									distance : -30
+								}
+							},
+							{
+								name: '[[#{statisticGlobalChartAttempts}]]',
+								data : attemptsData,
+								size : '80%',
+								innerSize : '60%',
+								dataLabels : {
+									formatter : function() {
+										// display only
+										// if larger
+										// than 0
+										return this.y > 0 ? '<b>'
+												+ this.point.name + ':</b> '
+												+ this.y : null;
+									}
+								}
+							} ]
+				});
+	});
+
+	var ok_json = new Array();
+	var failed_json = new Array();
+	$.getJSON('/admin/statistic/global/scatterDataOk', function(data) {
+		for (i = 0; i < data.length; i++) {
+			ok_json.push([ data[i].name, data[i].value ]);
+		}
+		$.getJSON('/admin/statistic/global/scatterDataFailed', function(data) {
+			for (i = 0; i < data.length; i++) {
+				failed_json.push([ data[i].name, data[i].value ]);
+			}
+			
+			$('#globalChartScatterPlot')
+			.highcharts(
+					{
+						chart : {
+							type : 'scatter',
+						},
+						title : {
+							text : 'Height Versus Weight of 507 Individuals by Gender'
+						},
+						subtitle : {
+							text : 'Source: Heinz  2003'
+						},
+						xAxis : {
+							title : {
+								enabled : true,
+								text : 'Benutzer'
+							},
+							startOnTick : true,
+							endOnTick : true,
+							showLastLabel : true
+						},
+						yAxis : {
+							min : 0,
+							max : 24,
+							title : {
+								text : 'Uhrzeit'
+							}
+						},
+						legend : {
+							layout : 'vertical',
+							align : 'left',
+							verticalAlign : 'top',
+							x : 100,
+							y : 70,
+							floating : true,
+							backgroundColor : (Highcharts.theme && Highcharts.theme.legendBackgroundColor)
+									|| '#FFFFFF',
+							borderWidth : 1
+						},
+						plotOptions : {
+							scatter : {
+								marker : {
+									radius : 5,
+									states : {
+										hover : {
+											enabled : true,
+											lineColor : 'rgb(100,100,100)'
+										}
+									}
+								},
+								states : {
+									hover : {
+										marker : {
+											enabled : false
+										}
+									}
+								},
+								tooltip : {
+									headerFormat : '<b>{series.name}</b><br>',
+									pointFormat : '{point.x} cm, {point.y} kg'
+								}
+							}
+						},
+						series : [
+								{
+									name : 'erfolgreich',
+									color : 'rgba(223, 83, 83, .5)',
+									data : ok_json
+
+								},
+								{
+									name : 'fehlgeschlagen',
+									color : 'rgba(119, 152, 191, .5)',
+									data : failed_json
+								} ]
+					});	
+			
+			
+		});
+	});
 });
-	/*]]>*/
+			/*]]>*/
 		</script>
 
 		<style type="text/css">
@@ -112,10 +242,6 @@
 						</div>
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-right">
-								<button type="button" class="btn btn-ws btn-default navbar-btn disabled"
-									id="featuresSave">
-									<span th:text="#{featuresActionSave}"></span>
-								</button>
 								<a class="glyph-link" href="/admin/feature">
 									<span class="glyphicon glyphicon-refresh"></span>
 								</a>
@@ -123,9 +249,11 @@
 						</div>
 					</div>
 				</nav>
-				<div id="globalChart" class="container-fluid">
-
-
+				<div class="container-fluid">
+					<div class="row">
+						<div id="globalChartPie" class="col-xs-12 col-md-6"></div>
+						<div id="globalChartScatterPlot" class="col-xs-12 col-md-6"></div>
+					</div>
 				</div>
 			</div>
 		</div>
