--- a/webclient/src/main/resources/templates/feature/administration/loginAttemptsGlobal.html
+++ b/webclient/src/main/resources/templates/feature/administration/loginAttemptsGlobal.html
@@ -1,261 +1,272 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>MTS Web Client - Statistik Anmeldeversuche</title>
+<title>MTS Web Client - Statistik Anmeldeversuche</title>
 
-		<link th:href="@{/css/bootstrap.css}" rel="stylesheet" media="screen" />
-		<link th:href="@{/css/bootstrap-theme.css}" rel="stylesheet"
-			media="screen" />
-		<link th:href="@{/css/webclient.css}" rel="stylesheet" />
-		<link th:href="@{/css/bootstrap-select.css}" rel="stylesheet" />
-		<link th:href="@{/css/bootstrap-switch.css}" rel="stylesheet" />
+<link th:href="@{/css/bootstrap.css}" rel="stylesheet" media="screen" />
+<link th:href="@{/css/bootstrap-theme.css}" rel="stylesheet"
+	media="screen" />
+<link th:href="@{/css/webclient.css}" rel="stylesheet" />
+<link th:href="@{/css/bootstrap-select.css}" rel="stylesheet" />
+<link th:href="@{/css/bootstrap-switch.css}" rel="stylesheet" />
 
-		<script th:src="@{/js/jquery.js}"></script>
-		<script th:src="@{/js/bootstrap.js}"></script>
-		<script th:src="@{/js/bootstrap-select.js}"></script>
-		<script th:src="@{/js/webclient.js}"></script>
-		<script th:src="@{/js/highcharts.js}"></script>
-		<script type="text/javascript" th:inline="text">
-			/*<![CDATA[*/
-		$(function() {
+<script th:src="@{/js/jquery.js}"></script>
+<script th:src="@{/js/bootstrap.js}"></script>
+<script th:src="@{/js/bootstrap-select.js}"></script>
+<script th:src="@{/js/webclient.js}"></script>
+<script th:src="@{/js/highcharts.js}"></script>
+<script th:src="@{/js/heatmap.js}"></script>
+<script type="text/javascript" th:inline="text">
+	/*<![CDATA[*/
+	$(function() {
 
-	// Make monochrome colors and set them as default for all pies
-	Highcharts.getOptions().plotOptions.pie.colors = (function() {
-		var colors = [], base = Highcharts.getOptions().colors[0], i;
+		// Make monochrome colors and set them as default for all pies
+		Highcharts.getOptions().plotOptions.pie.colors = (function() {
+			var colors = [], base = Highcharts.getOptions().colors[0], i;
 
-		for (i = 0; i < 10; i += 1) {
-			// Start out with a darkened base color (negative brighten), and end
-			// up with a much brighter color
-			colors.push(Highcharts.Color(base).brighten((i - 3) / 7).get());
-		}
-		return colors;
-	}());
-
-	var categories_json = new Array();
-	var attempts_json = new Array();
-	$.getJSON('/admin/statistic/global/pieData', function(data) {
-		for (i = 0; i < data.length; i++) {
-			var attemptsSum = data[i].countOk + data[i].countFailed;
-
-			categories_json.push([ data[i].name, attemptsSum ]);
-			attempts_json.push({
-				drilldown : {
-					categories : [ '[[#{statisticGlobalChartAttemptsOk}]]', '[[#{statisticGlobalChartAttemptsFailed}]]' ],
-					data : [ data[i].countOk, data[i].countFailed ]
-				}
-			});
-		}
-
-		var userData = new Array();
-		var attemptsData = new Array();
-		var i;
-		var j;
-
-		for (i = 0; i < categories_json.length; i += 1) {
-			userData.push({
-				name : categories_json[i][0],
-				y : categories_json[i][1]
-			});
-
-			for (j = 0; j < 2; j += 1) {
-				attemptsData.push({
-					name : attempts_json[i].drilldown.categories[j],
-					y : attempts_json[i].drilldown.data[j]
-				});
+			for (i = 0; i < 10; i += 1) {
+				// Start out with a darkened base color (negative brighten), and end
+				// up with a much brighter color
+				colors.push(Highcharts.Color(base).brighten((i - 3) / 7).get());
 			}
-		}
+			return colors;
+		}());
 
-		$('#globalChartPie').highcharts(
-				{
-					chart : {
-						type : 'pie'
-					},
-					title : {
-						text : '[[#{statisticGlobalChartTitle}]]'
-					},
-					plotOptions : {
-						pie : {
-							shadow : false,
-							center : [ '50%', '50%' ]
-						}
-					},
-					series : [
-							{
-								name : '[[#{statisticGlobalChartAttemptsSum}]]',
-								data : userData,
-								size : '60%',
-								dataLabels : {
-									formatter : function() {
-										return this.y > 5 ? this.point.name
-												: null;
-									},
-									color : '#ffffff',
-									distance : -30
-								}
-							},
-							{
-								name: '[[#{statisticGlobalChartAttempts}]]',
-								data : attemptsData,
-								size : '80%',
-								innerSize : '60%',
-								dataLabels : {
-									formatter : function() {
-										// display only
-										// if larger
-										// than 0
-										return this.y > 0 ? '<b>'
-												+ this.point.name + ':</b> '
-												+ this.y : null;
-									}
-								}
-							} ]
-				});
-	});
+		var categories_json = new Array();
+		var attempts_json = new Array();
+		$
+				.getJSON(
+						'/admin/statistic/global/pieData',
+						function(data) {
+							for (i = 0; i < data.length; i++) {
+								var attemptsSum = data[i].countOk
+										+ data[i].countFailed;
 
-	var ok_json = new Array();
-	var failed_json = new Array();
-	$.getJSON('/admin/statistic/global/scatterDataOk', function(data) {
-		for (i = 0; i < data.length; i++) {
-			ok_json.push([ data[i].name, data[i].value ]);
-		}
-		$.getJSON('/admin/statistic/global/scatterDataFailed', function(data) {
-			for (i = 0; i < data.length; i++) {
-				failed_json.push([ data[i].name, data[i].value ]);
-			}
-			
-			$('#globalChartScatterPlot')
-			.highcharts(
-					{
-						chart : {
-							type : 'scatter',
-						},
-						title : {
-							text : 'Height Versus Weight of 507 Individuals by Gender'
-						},
-						subtitle : {
-							text : 'Source: Heinz  2003'
-						},
-						xAxis : {
-							title : {
-								enabled : true,
-								text : 'Benutzer'
-							},
-							startOnTick : true,
-							endOnTick : true,
-							showLastLabel : true
-						},
-						yAxis : {
-							min : 0,
-							max : 24,
-							title : {
-								text : 'Uhrzeit'
+								categories_json.push([ data[i].name,
+										attemptsSum ]);
+								attempts_json
+										.push({
+											drilldown : {
+												categories : [
+														'[[#{statisticGlobalChartAttemptsOk}]]',
+														'[[#{statisticGlobalChartAttemptsFailed}]]' ],
+												data : [ data[i].countOk,
+														data[i].countFailed ]
+											}
+										});
 							}
-						},
-						legend : {
-							layout : 'vertical',
-							align : 'left',
-							verticalAlign : 'top',
-							x : 100,
-							y : 70,
-							floating : true,
-							backgroundColor : (Highcharts.theme && Highcharts.theme.legendBackgroundColor)
-									|| '#FFFFFF',
-							borderWidth : 1
-						},
-						plotOptions : {
-							scatter : {
-								marker : {
-									radius : 5,
-									states : {
-										hover : {
-											enabled : true,
-											lineColor : 'rgb(100,100,100)'
-										}
-									}
-								},
-								states : {
-									hover : {
-										marker : {
-											enabled : false
-										}
-									}
-								},
-								tooltip : {
-									headerFormat : '<b>{series.name}</b><br>',
-									pointFormat : '{point.x} cm, {point.y} kg'
+
+							var userData = new Array();
+							var attemptsData = new Array();
+							var i;
+							var j;
+
+							for (i = 0; i < categories_json.length; i += 1) {
+								userData.push({
+									name : categories_json[i][0],
+									y : categories_json[i][1]
+								});
+
+								for (j = 0; j < 2; j += 1) {
+									attemptsData
+											.push({
+												name : attempts_json[i].drilldown.categories[j],
+												y : attempts_json[i].drilldown.data[j]
+											});
 								}
 							}
-						},
-						series : [
-								{
-									name : 'erfolgreich',
-									color : 'rgba(223, 83, 83, .5)',
-									data : ok_json
 
-								},
-								{
-									name : 'fehlgeschlagen',
-									color : 'rgba(119, 152, 191, .5)',
-									data : failed_json
-								} ]
-					});	
-			
-			
-		});
+							$('#globalChartPie')
+									.highcharts(
+											{
+												chart : {
+													type : 'pie'
+												},
+												title : {
+													text : '[[#{statisticGlobalChartTitle}]]'
+												},
+												plotOptions : {
+													pie : {
+														shadow : false,
+														center : [ '50%', '50%' ]
+													}
+												},
+												series : [
+														{
+															name : '[[#{statisticGlobalChartAttemptsSum}]]',
+															data : userData,
+															size : '60%',
+															dataLabels : {
+																formatter : function() {
+																	return this.y > 5 ? this.point.name
+																			: null;
+																},
+																color : '#ffffff',
+																distance : -30
+															}
+														},
+														{
+															name : '[[#{statisticGlobalChartAttempts}]]',
+															data : attemptsData,
+															size : '80%',
+															innerSize : '60%',
+															dataLabels : {
+																formatter : function() {
+																	// display only
+																	// if larger
+																	// than 0
+																	return this.y > 0 ? '<b>'
+																			+ this.point.name
+																			+ ':</b> '
+																			+ this.y
+																			: null;
+																}
+															}
+														} ]
+											});
+						});
+
+		var heatData_json = new Array();
+		var xAxisCategories_json = new Array();
+		var yAxisCategories_json = new Array();
+		$
+				.getJSON(
+						'/admin/statistic/global/heatData',
+						function(data) {
+							for (i = 0; i < data.length; i++) {
+								xAxisCategories_json.push([ data[i].name ]);
+
+								if (i == 0) {
+									for (hour = 0; hour < data[i].hours.length; hour++) {
+										yAxisCategories_json
+												.push([ data[i].hours[hour].name ]);
+									}
+								}
+
+								for (hour = 0; hour < data[i].hours.length; hour++) {
+									yAxisCategories_json
+											.push([ data[i].hours[hour].name ]);
+									heatData_json.push([ data[i].position,
+											data[i].hours[hour].position,
+											data[i].hours[hour].count ]);
+								}
+							}
+
+							$('#globalChartHeat')
+									.highcharts(
+											{
+
+												chart : {
+													type : 'heatmap',
+													marginTop : 40,
+													marginBottom : 80,
+													plotBorderWidth : 1
+												},
+
+												title : {
+													text : '[[#{statisticGlobalChartHeatTitle}]]'
+												},
+
+												xAxis: {
+										            categories: xAxisCategories_json
+										        },
+
+										        yAxis: {
+										            categories: yAxisCategories_json,
+										            title: null
+										        },
+
+												colorAxis : {
+													min : 0,
+													minColor : '#FFFFFF',
+													maxColor : Highcharts
+															.getOptions().colors[0]
+												},
+
+												legend : {
+													align : 'right',
+													layout : 'vertical',
+													margin : 0,
+													verticalAlign : 'top',
+													y : 25,
+													symbolHeight : 280
+												},
+
+												tooltip : {
+													formatter : function() {
+														return '<b>'
+																+ this.series.xAxis.categories[this.point.x]
+																+ '</b><br><b>'
+																+ this.point.value
+																+ '</b> [[#{statisticGlobalChartAttempts}]]';
+													}
+												},
+
+												series : [ {
+													borderWidth : 1,
+													data : heatData_json,
+													dataLabels : {
+														enabled : false,
+														color : '#000000'
+													}
+												} ]
+
+											});
+						});
 	});
-});
-			/*]]>*/
-		</script>
+	/*]]>*/
+</script>
 
-		<style type="text/css">
-			body {
-			padding-top: 127px;
-			}
-		</style>
+<style type="text/css">
+body {
+	padding-top: 127px;
+}
+</style>
 
-	</head>
-	<body>
-		<!-- {!begin layout} -->
-		<div th:include="layout :: header"></div>
-		<!-- {!end layout} -->
+</head>
+<body>
+	<!-- {!begin layout} -->
+	<div th:include="layout :: header"></div>
+	<!-- {!end layout} -->
 
-		<div class="wrapper" id="wrapper">
-			<!-- div class="row" -->
+	<div class="wrapper" id="wrapper">
+		<!-- div class="row" -->
 
-			<!-- {!begin navigation} -->
-			<div
-				th:include="feature/administration/adminmenu :: navigation('global', 'statistic')"
-				id="navigation" class="navigation"></div>
-			<!-- {!end navigation} -->
+		<!-- {!begin navigation} -->
+		<div
+			th:include="feature/administration/adminmenu :: navigation('global', 'statistic')"
+			id="navigation" class="navigation"></div>
+		<!-- {!end navigation} -->
 
-			<div id="content" class="content">
-				<nav class="navbar navbar-default navbar-top sub-nav">
-					<div class="container-fluid">
-						<div class="navbar-header">
-							<div class="navbar-brand navbar-text-submenu">
-								<span th:text="#{statisticGlobalTitle}"></span>
-							</div>
-						</div>
-						<div class="collapse navbar-collapse">
-							<ul class="nav navbar-right">
-								<a class="glyph-link" href="/admin/feature">
-									<span class="glyphicon glyphicon-refresh"></span>
-								</a>
-							</ul>
-						</div>
-					</div>
-				</nav>
+		<div id="content" class="content">
+			<nav class="navbar navbar-default navbar-top sub-nav">
 				<div class="container-fluid">
-					<div class="row">
-						<div id="globalChartPie" class="col-xs-12 col-md-6"></div>
-						<div id="globalChartScatterPlot" class="col-xs-12 col-md-6"></div>
+					<div class="navbar-header">
+						<div class="navbar-brand navbar-text-submenu">
+							<span th:text="#{statisticGlobalTitle}"></span>
+						</div>
 					</div>
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-right">
+							<a class="glyph-link" href="/admin/statistic/global"> <span
+								class="glyphicon glyphicon-refresh"></span>
+							</a>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<div class="container-fluid">
+				<div class="row">
+					<div id="globalChartPie" class="col-xs-12 col-md-6"></div>
+					<div id="globalChartHeat" class="col-xs-12 col-md-6"></div>
 				</div>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
 </html>
