--- a/webclient/src/main/resources/templates/layout.html
+++ b/webclient/src/main/resources/templates/layout.html
@@ -6,26 +6,28 @@
 <body>
 
 	<div th:fragment="header">
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container-fluid custom-header">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="container-fluid">
-					<a href="/">
-						<div class="navbar-header">
-							<div class="navbar-brand">
-								<img alt="MTS Web Client" th:src="@{/icons/logo_32_white.png}" />
-							</div>
-							<p class="navbar-text">
-								MTS Web Client <span
-									th:if="${beans.applicationUtil.getSystemIdentifier()  != null}"
-									th:text="' - ' + ${beans.applicationUtil.getSystemIdentifier()}"></span>
-							</p>
-						</div>
-					</a>
+					<div class="navbar-header">
+						<a class="navbar-brand" href="/"> <span><img
+								alt="MTS Web Client" th:src="@{/icons/logo_32_white.png}" /></span> <span
+							class="navbar-custom-title">MTS Web Client <span
+								th:if="${beans.applicationUtil.getSystemIdentifier()  != null}"
+								th:text="' - ' + ${beans.applicationUtil.getSystemIdentifier()}"></span></span>
+						</a>
+
+						<button type="button" class="navbar-toggle" data-toggle="collapse"
+							data-target=".navbar-collapse">
+							<span class="sr-only">Toggle Navigation</span> <span
+								class="icon-bar"></span> <span class="icon-bar"></span> <span
+								class="icon-bar"></span>
+						</button>
+					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse"
-						id="bs-example-navbar-collapse-1">
+					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li><span class="label label-default"
 								th:style="'background-color: ' + ${beans.authenticationUtil.getSelectedClient().getColor()} + ' !important;'">
@@ -46,7 +48,7 @@
 									</select>
 								</form>
 							</li>
-							<li><span class="label label-default"> <label
+							<!-- li><span class="label label-default"> <label
 									th:text="#{user}" />
 							</span>
 								<div class="btn-group">
@@ -63,7 +65,18 @@
 												<p th:text="#{switchLocale}" />
 										</a></li>
 									</ul>
-								</div></li>
+								</div></li-->
+							<li class="dropdown"><a href="#" class="dropdown-toggle"
+								data-toggle="dropdown"><label th:text="#{user}" />&nbsp;<span
+									sec:authentication="name"></span>&nbsp;<b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a th:href="@{/logout}">
+											<p th:text="#{logout}" />
+									</a></li>
+									<li><a th:href="@{/switchLocale}">
+											<p th:text="#{switchLocale}" />
+									</a></li>
+								</ul></li>
 						</ul>
 					</div>
 					<!-- /.navbar-collapse -->
