--- a/webclient/src/main/resources/templates/layout.html
+++ b/webclient/src/main/resources/templates/layout.html
@@ -19,7 +19,8 @@
 						</a>
 
 						<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target=".navbar-collapse">
+							data-target=".navbar-collapse"
+							th:style="'background-color: ' + ${beans.authenticationUtil.getSelectedClient().getColor()} + ' !important;'">
 							<span class="sr-only">Toggle Navigation</span> <span
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
@@ -28,44 +29,29 @@
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse">
+						<form id="clientSelectForm"
+							th:action="@{${beans.authenticationUtil.getClientChangePath()}}"
+							method="POST">
+							<input type="hidden" th:name="selectedClient"
+								id="hiddenSelectedClient" />
+						</form>
 						<ul class="nav navbar-nav navbar-right">
-							<li><span class="label label-default"
+							<li class="hidden-xs"><span
+								class="label label-default client-label"
 								th:style="'background-color: ' + ${beans.authenticationUtil.getSelectedClient().getColor()} + ' !important;'">
 									<label th:text="#{client}" />
 							</span></li>
-							<li class="space_right">
-								<form id="clientSelectForm"
-									th:action="@{${beans.authenticationUtil.getClientChangePath()}}"
-									method="POST">
-									<select id="clientSelect" class="selectpicker btn-ws select-xs"
-										th:name="selectedClient">
-										<option
-											th:each="client : ${beans.authenticationUtil.getClients()}"
-											th:value="${client.id}" th:text="${client.name}"
-											th:selected="${client.id == beans.authenticationUtil.getSelectedClient().getId()}">
-											<p th:text="${client.name}" />
-										</option>
-									</select>
-								</form>
-							</li>
-							<!-- li><span class="label label-default"> <label
-									th:text="#{user}" />
-							</span>
-								<div class="btn-group">
-									<button type="button"
-										class="btn btn-default btn-xs dropdown-toggle"
-										data-toggle="dropdown" aria-expanded="false">
-										<span sec:authentication="name"></span> <span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu" role="menu">
-										<li><a th:href="@{/logout}">
-												<p th:text="#{logout}" />
-										</a></li>
-										<li><a th:href="@{/switchLocale}">
-												<p th:text="#{switchLocale}" />
-										</a></li>
-									</ul>
-								</div></li-->
+							<li class="dropdown dropdown-select"><a href="#"
+								class="dropdown-toggle" data-toggle="dropdown"><label class="visible-xs-inline" th:text="#{client}"/>&nbsp;<span
+									th:text="${beans.authenticationUtil.getSelectedClient().getName()}"></span>&nbsp;<b
+									class="caret"></b></a>
+								<ul class="dropdown-menu" role="menu">
+									<li role="presentation"
+										th:each="client : ${beans.authenticationUtil.getClients()}"><a
+										role="menuitem" tabindex="-1" href="#"><span
+											class="client-info" th:text="${client.name}"
+											th:value="${client.id}"></span></a></li>
+								</ul></li>
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown"><label th:text="#{user}" />&nbsp;<span
 									sec:authentication="name"></span>&nbsp;<b class="caret"></b></a>
