copy grup part 3

--- a/webclient/src/main/resources/templates/feature/administration/usergroup.html
+++ b/webclient/src/main/resources/templates/feature/administration/usergroup.html
@@ -549,7 +549,7 @@ body {
 										id="groupCopyAttributesTable">
 										<thead>
 											<tr>
-												<th><span th:text="#{groupsTableName}"></span></th>
+												<th><span th:text="#{groupsTableNewName}"></span></th>
 												<th><span th:text="#{groupsTableDescription}"></span></th>
 												<th><span th:text="#{groupsTableStatus}"></span></th>
 												<th><span th:text="#{groupsTableClientSelect}"></span></th>
