--- a/webclient/src/main/resources/templates/feature/administration/usergroup.html
+++ b/webclient/src/main/resources/templates/feature/administration/usergroup.html
@@ -291,6 +291,7 @@
 						$('#buttonGroupCopySave').click(function() {
 
 							$("#hiddenDoCopy").val(true);
+							$("#groupsForm").get(0).setAttribute('action', '/admin/usergroup/copy');
 							$("#groupsForm").submit();
 						});
 
@@ -483,6 +484,7 @@ body {
 							</tr>
 						</tbody>
 						<input type="hidden" id="hiddenClientId" th:field="*{clientId}" />
+						<input type="hidden" id="hiddenRoles" th:field="*{roles}" />
 					</table>
 
 					<!-- Modal -->
