--- a/webclient/src/main/resources/templates/feature/administration/usergroup.html
+++ b/webclient/src/main/resources/templates/feature/administration/usergroup.html
@@ -15,6 +15,7 @@
 <link th:href="@{/css/bootstrap-select.css}" rel="stylesheet" />
 <link th:href="@{/css/bootstrap-switch.css}" rel="stylesheet" />
 <link th:href="@{/css/bootstrap-colorpicker.css}" rel="stylesheet" />
+<link th:href="@{/css/jquery.treegrid.css}" rel="stylesheet" />
 
 <script th:src="@{/js/jquery.js}"></script>
 <script th:src="@{/js/jquery.validate.js}"></script>
@@ -25,6 +26,8 @@
 <script th:src="@{/js/bootstrap-switch.js}"></script>
 <script th:src="@{/js/bootstrap-colorpicker.js}"></script>
 <script th:src="@{/js/webclient.js}"></script>
+<script th:src="@{/js/jquery.treegrid.js}"></script>
+<script th:src="@{/js/jquery.treegrid.bootstrap3.js}"></script>
 
 <script type="text/javascript" th:inline="javascript">
 	/*<![CDATA[*/
@@ -330,6 +333,8 @@
 							}
 						
 						// Ende Prüfen auf Fehler beim Gruppe Kopieren
+						
+						$('#roleTable').treegrid();
 					});
 
 	function isRoleAssigned(rid, assignedRids) {
@@ -538,28 +543,40 @@ body {
 										id="roleTable">
 										<thead>
 											<tr>
+												<th><span th:text="#{rolesTableFeature}"></span></th>
 												<th><span th:text="#{rolesTableName}"></span></th>
 												<th><span th:text="#{rolesTableDescription}"></span></th>
 												<th><span th:text="#{roleAssigned}"></span></th>
 											</tr>
 										</thead>
 										<tbody>
-											<tr class="roleItem" th:each="item, stat : *{roles}">
-												<td><span th:text="*{roles[__${stat.index}__].name}"></span>
+											<tr
+												th:attr="class=*{featureRoleTreeGrid[__${stat.index}__].featureName != null ? 'roleItem treegrid-' + featureRoleTreeGrid[__${stat.index}__].rowId : ''}"
+												th:attrappend="class=*{featureRoleTreeGrid[__${stat.index}__].featureName == null ? 'roleItem treegrid-' + featureRoleTreeGrid[__${stat.index}__].rowId + ' treegrid-parent-' + featureRoleTreeGrid[__${stat.index}__].parentRowId : ''}"
+												th:each="item, stat : *{featureRoleTreeGrid}">
+												<td><span
+													th:text="*{featureRoleTreeGrid[__${stat.index}__].featureName}"></span>
 												</td>
 												<td><span
-													th:text="#{*{'accessrole.' + roles[__${stat.index}__].feature.name + '_' +roles[__${stat.index}__].name}}"></span>
+													th:if="*{featureRoleTreeGrid[__${stat.index}__].role != null}"
+													th:text="*{featureRoleTreeGrid[__${stat.index}__].role.name}"></span>
 												</td>
-												<td><input class="roleSwitch"
-													th:id="${'role-switch-'+stat.index}" type="checkbox"
-													name="role-assignment-switch" data-size="mini"
-													data-on-color="success" data-off-color="warning"></input> <input
+												<td><span
+													th:if="*{featureRoleTreeGrid[__${stat.index}__].role != null}"
+													th:text="#{*{'accessrole.' + featureRoleTreeGrid[__${stat.index}__].role.feature.name + '_' +featureRoleTreeGrid[__${stat.index}__].role.name}}"></span>
+												</td>
+												<td><input
+													th:if="*{featureRoleTreeGrid[__${stat.index}__].role != null}"
+													class="roleSwitch" th:id="${'role-switch-'+stat.index}"
+													type="checkbox" name="role-assignment-switch"
+													data-size="mini" data-on-color="success"
+													data-off-color="warning"></input> <input
 													class="hiddenRoleSwitchValue" type="hidden"
 													th:id="${'hiddenRoleSwitchValue-'+stat.index}"
 													value="false" /> <input class="hiddenRoleRid"
 													th:id="${'hiddenRoleRid-'+stat.index}" type="hidden"
-													th:field="*{roles[__${stat.index}__].id}" /> <input
-													class="hiddenGroupRid"
+													th:field="*{featureRoleTreeGrid[__${stat.index}__].role.id}" />
+													<input class="hiddenGroupRid"
 													th:id="${'hiddenGroupRid-'+stat.index}" type="hidden"
 													value="" /></td>
 											</tr>
