--- a/webclient/src/main/resources/templates/feature/administration/userrole.html
+++ b/webclient/src/main/resources/templates/feature/administration/userrole.html
@@ -14,12 +14,15 @@
 <link th:href="@{/css/webclient.css}" rel="stylesheet" />
 <link th:href="@{/css/bootstrap-switch.css}" rel="stylesheet" />
 <link th:href="@{/css/bootstrap-select.css}" rel="stylesheet" />
+<link th:href="@{/css/jquery.treegrid.css}" rel="stylesheet" />
 
 <script th:src="@{/js/jquery.js}"></script>
 <script th:src="@{/js/bootstrap.js}"></script>
 <script th:src="@{/js/bootstrap-switch.js}"></script>
 <script th:src="@{/js/webclient.js}"></script>
 <script th:src="@{/js/bootstrap-select.js}"></script>
+<script th:src="@{/js/jquery.treegrid.js}"></script>
+<script th:src="@{/js/jquery.treegrid.bootstrap3.js}"></script>
 
 <script type="text/javascript" th:inline="text">
 	/*<![CDATA[*/
